<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#fdfffb"
        android:layout_weight="1.60"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtLogin"
                android:text="@string/tituloLogin"

                android:textColor="#000000"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/titulo"
                />
            <EditText
                android:id="@+id/UsuarioLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:hint="@string/hintUsuario"
                android:paddingTop="150dp"
                />
            <EditText
                android:id="@+id/ContraseñaLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/UsuarioLogin"
                android:inputType="textPassword"
                android:hint="@string/hintContraseña"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonLogeo"
                android:layout_below="@id/ContraseñaLogin"
                android:text="@string/botonLogeo"
                android:onClick="logear"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtRegistrar"
                android:text="@string/registrar"
                android:layout_below="@id/botonLogeo"
                android:layout_centerHorizontal="true"
                android:paddingTop="100dp" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/botonRegistro"
                android:layout_below="@id/txtRegistrar"
                android:text="@string/botonRegistro"
                android:onClick="LanzarRegistrar"
                />
        </RelativeLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>