<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Registrar"
    android:orientation="vertical"
    >


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#fdfffb"
        android:layout_weight="1.60"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtRegistrar"
                android:text="@string/tituloRegistrar"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="@dimen/titulo"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtPerfil"
                android:text="Selecciona el tipo de usuario"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/txtRegistrar"
                android:textColor="#000000"
                android:textSize="@dimen/textoNormal"
                android:paddingTop="40dp"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerPerfil"
                android:layout_marginTop="40dp"
                android:layout_below="@id/txtPerfil">

            </Spinner>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtNombre"
                android:text="@string/txtNombre"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/txtPerfil"
                android:textColor="#000000"
                android:textSize="@dimen/textoNormal"
                android:paddingTop="40dp"
                />
            <EditText
                android:id="@+id/NombresRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textCapWords"
                android:layout_below="@id/txtNombre"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtApellido"
                android:text="@string/txtApellido"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/NombresRegistrar"
                android:textColor="#000000"
                android:textSize="@dimen/textoNormal"
                android:paddingTop="10dp"
                />
            <EditText
                android:id="@+id/Apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textCapWords"
                android:layout_below="@id/txtApellido"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtUsuario"
                android:text="@string/hintUsuario"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/Apellidos"
                android:textColor="#000000"
                android:textSize="@dimen/textoNormal"
                android:paddingTop="10dp"
                />
            <EditText
                android:id="@+id/Usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:layout_below="@id/txtUsuario"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtContraseña"
                android:text="@string/hintContraseña"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/Usuario"
                android:textColor="#000000"
                android:textSize="@dimen/textoNormal"
                android:paddingTop="10dp"
                />
            <EditText
                android:id="@+id/ContraseñaRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textPassword"
                android:layout_below="@id/txtContraseña"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtCorreo"
                android:text="@string/txtCorreo"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/ContraseñaRegistrar"
                android:textColor="#000000"
                android:textSize="@dimen/textoNormal"
                android:paddingTop="10dp"
                />
            <EditText
                android:id="@+id/Correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textEmailAddress"
                android:layout_below="@id/txtCorreo"
                />
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/botonRegistrar"
                 android:layout_below="@id/Correo"
                 android:text="@string/botonRegistrar"

                 />
        </RelativeLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>